--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.1.0"
+    "react-scripts": "^1.1.0",
+    "victory": "^0.25.4"
   },
   "scripts": {
     "start": "react-scripts start",
