--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-password-mask": "^3.3.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.1.0"
+    "react-scripts": "^1.1.0",
+    "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
