--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "rc-progress": "^2.2.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-password-mask": "^3.3.0",
+    "react-password-strength": "^2.3.1",
+    "react-password-strength-meter": "^1.0.5",
+    "react-percentage-circle": "^1.1.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.0",
-    "zxcvbn": "^4.4.2",
-    "victory": "^0.25.4"
+    "victory": "^0.25.4",
+    "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
