--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-progressbar.js": "^0.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.0",
+    "react-textgradient": "0.0.2",
     "victory": "^0.25.4",
     "zxcvbn": "^4.4.2"
   },
